tests/invalid_ast_samples/dae694f70daffbafb3644d1800924e139266d9b86f9d5bd4d0c519a3fe5c49fb.py
from ast import *

tree = Module(body=[Delete(targets=[Yield()])], type_ignores=[])

# version: 3.12.0
#
# Source:
# del (yield)
#
#
# Error:
#     SyntaxError('cannot delete yield expression', ('<file>', 1, 6, 'del (yield)\n', 1, 11))
